# askama-actix-mcve

./: Cargo.toml
src/: main.rs
