[package]
name = "askama-actix-mcve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.4.0-beta.12"
actix-web = "4.0.0-rc.2"
askama = { version = "0.11.0", features = ["with-actix-web", "mime", "mime_guess"] }
askama_actix = "0.12"
